Add large files with Git LFS

--- a/home/templates/service.html
+++ b/home/templates/service.html
@@ -341,8 +341,8 @@
                     map.removeSource('route');
                 }
     
-                startAddressInput.value = 'Current Location';
-                destinationAddressInput.value = 'Example Destination';
+                startAddressInput.value = '';
+                destinationAddressInput.value = '';
     
                 searchRouteButton.addEventListener('click', function () {
                     const startAddress = startAddressInput.value;
