--- a/home/templates/drowsiness.html
+++ b/home/templates/drowsiness.html
@@ -315,6 +315,45 @@
       </div>
     </section>
   </section>
+  <!-- footer section -->
+  <footer class="footer_section" style="background-color:#OcOcOc; color:#E5B55C; padding: 20px 0; font-family:Bree serif; font-size: 0.9em;">
+    <div class="container">
+      <div class="row justify-content-center">
+        <!-- About Us Section -->
+        <div class="col-md-3 text-center mb-3">
+          <h5 style="font-size: 1em; font-weight: 600; margin-bottom: 10px;">About</h5>
+          <p style="font-weight: 300; margin-bottom: 0;">Safety. Innovation. Precision.</p>
+        </div>
+  
+        <!-- Quick Links Section -->
+        <div class="col-md-3 text-center mb-3">
+          <h5 style="font-size: 1em; font-weight: 600; margin-bottom: 10px;">Quick Links</h5>
+          <ul style="list-style: none; padding-left: 0; margin-bottom: 0;">
+            <li><a href="{% url 'home' %}" style="color:#E5B55C; text-decoration: none;">Home</a></li>
+            <li><a href="#section" style="color:#E5B55C; text-decoration: none;">About</a></li>
+            <li><a href="{% url 'service' %}" style="color:#E5B55C; text-decoration: none;">Services</a></li>
+          </ul>
+        </div>
+  
+        <!-- Contact Details Section -->
+        <div class="col-md-3 text-center mb-3">
+          <h5 style="font-size: 1em; font-weight: 600; margin-bottom: 10px;">Contact Us</h5>
+        <p style="font-weight: 300; margin-bottom: 0;">
+          &nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp; Email: infodrivewiseai@gmail.com <br>
+          &nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;&nbsp; Address: 123 Drive Wise, Trivandrum Kerala India
+          </p>
+        </div>
+      </div>
+  
+      <!-- Footer Bottom Section -->
+      <div class="row mt-3">
+        <div class="col-md-12 text-center">
+          <p style="margin-bottom: 0;">&copy; 2024 Drive Wise. All Rights Reserved.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!--end of footer-->
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.js"></script>
   <script src="js/custom.js"></script>
