--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -113,14 +113,15 @@
     }
     .overlay-text {
       position: absolute;
-      top: 150px; 
+      bottom: 150px; 
       left: 20px; 
-      color: black;
+      color: orange;
     
       text-align: left;
       padding: 10px;
-      font-family: "Roboto Slab", serif;
+      font-family: "Bree serif", serif;
       font-style:normal ;
+      font-weight:bold;
       
       
 
@@ -132,7 +133,7 @@
     background:none;
     font-family:Bree Serif, serif;
     font-size:2em;
-    font-weight: 400;
+    font-weight: 800;
 
   }
     
@@ -161,7 +162,7 @@ p{
       
       <div class="header_bottom">
         <div class="container-fluid">
-          <nav class="navbar navbar-expand-lg custom_nav-container" style="background-color:#292929;">
+          <nav class="navbar navbar-expand-lg custom_nav-container" style="background-color:#292929;font-family:Bree serif;">
             
               <span>
                 <img src="{% static 'img/logo.png' %}" alt="" width="75 px" height="75px">
@@ -326,6 +327,44 @@ p{
   <br>
 
   <!-- footer section -->
+  <footer class="footer_section" style="background-color:#OcOcOc; color:#E5B55C; padding: 20px 0; font-family:Bree serif; font-size: 0.9em;">
+    <div class="container">
+      <div class="row justify-content-center">
+        <!-- About Us Section -->
+        <div class="col-md-3 text-center mb-3">
+          <h5 style="font-size: 1em; font-weight: 600; margin-bottom: 10px;">About</h5>
+          <p style="font-weight: 300; margin-bottom: 0;">Safety. Innovation. Precision.</p>
+        </div>
+  
+        <!-- Quick Links Section -->
+        <div class="col-md-3 text-center mb-3">
+          <h5 style="font-size: 1em; font-weight: 600; margin-bottom: 10px;">Quick Links</h5>
+          <ul style="list-style: none; padding-left: 0; margin-bottom: 0;">
+            <li><a href="{% url 'home' %}" style="color:#E5B55C; text-decoration: none;">Home</a></li>
+            <li><a href="#section" style="color:#E5B55C; text-decoration: none;">About</a></li>
+            <li><a href="{% url 'service' %}" style="color:#E5B55C; text-decoration: none;">Services</a></li>
+          </ul>
+        </div>
+  
+        <!-- Contact Details Section -->
+        <div class="col-md-3 text-center mb-3">
+          <h5 style="font-size: 1em; font-weight: 600; margin-bottom: 10px;">Contact Us</h5>
+        <p style="font-weight: 300; margin-bottom: 0;">
+          &nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp; Email: infodrivewiseai@gmail.com <br>
+          &nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;&nbsp; Address: 123 Drive Wise, Trivandrum Kerala India
+          </p>
+        </div>
+      </div>
+  
+      <!-- Footer Bottom Section -->
+      <div class="row mt-3">
+        <div class="col-md-12 text-center">
+          <p style="margin-bottom: 0;">&copy; 2024 Drive Wise. All Rights Reserved.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!--end of footer-->
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.js"></script>
   <script src="js/custom.js"></script>
